--- a/.github/workflows/run_test_action.yml
+++ b/.github/workflows/run_test_action.yml
@@ -20,14 +20,11 @@ jobs:
       with:
           python-version: 3.9 # Specify the branch name
 
-
     - name: Run script
       run: python test_action/test.py
 
     - name: Commit changes
-      uses: stefanzweifel/git-auto-commit-action@v4
+      uses: EndBug/add-and-commit@v9 
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: ${{ github.ref }}
-        commit_message: 'Run test script'
-        commit_options: '--no-verify'
+        message: 'Run test script'
+
