--- a/.github/workflows/run_test_action.yml
+++ b/.github/workflows/run_test_action.yml
@@ -15,13 +15,22 @@ jobs:
       uses: actions/checkout@v2
       with:
         ref: automate-qtc
-    - name: Set up Python 3.9
+    - name: Set up Python 3.10
       uses: actions/setup-python@v2
       with:
-          python-version: 3.9 # Specify the branch name
+          python-version: 3.10
+          
+    - name: Set up enviroment
+      run: |
+      pip install pipenv
+      pipenv install --dev
+      pipenv shell
+
 
     - name: Run script
-      run: python test_action/test.py
+      run: |
+      python metmuseum/metmuseum_scratcher.py
+      python internetarchive/internetarchive_scratcher.py
 
     - name: Commit changes
       uses: EndBug/add-and-commit@v9 
