--- a/.github/workflows/run_test_action.yml
+++ b/.github/workflows/run_test_action.yml
@@ -22,15 +22,14 @@ jobs:
           
     - name: Set up enviroment
       run: |
-      pip install pipenv
-      pipenv install --dev
-      pipenv shell
+        pip install pipenv
+        pipenv install --dev
 
 
     - name: Run script
       run: |
-      python metmuseum/metmuseum_scratcher.py
-      python internetarchive/internetarchive_scratcher.py
+        pipenv run metmuseum/metmuseum_scratcher.py
+        pipenv run internetarchive/internetarchive_scratcher.py
 
     - name: Commit changes
       uses: EndBug/add-and-commit@v9 
