--- a/.github/workflows/run_test_action.yml
+++ b/.github/workflows/run_test_action.yml
@@ -29,6 +29,7 @@ jobs:
     - name: Run script
       run: |
         pipenv run metmuseum/metmuseum_scratcher.py
+      run: pipenv run wikicommons/wikicommons_scratcher.py
 
     - name: Commit changes
       uses: EndBug/add-and-commit@v9 
