--- a/.github/workflows/run_test_action.yml
+++ b/.github/workflows/run_test_action.yml
@@ -24,15 +24,15 @@ jobs:
       run: |
         pip install pipenv
         pipenv install --dev
-        pipenv shell
+        # pipenv shell
 
 
     - name: Run script
       run: |
-        python metmuseum/metmuseum_scratcher.py
-        python wikicommons/wikicommons_scratcher.py
-        python wikipedia/wikipedia_scratcher.py
-        python internetarchive/internetarchive_scratcher.py
+        pipenv run metmuseum/metmuseum_scratcher.py
+        pipenv run wikicommons/wikicommons_scratcher.py
+        pipenv run wikipedia/wikipedia_scratcher.py
+        pipenv run internetarchive/internetarchive_scratcher.py
 
     - name: Commit changes
       uses: EndBug/add-and-commit@v9 
