--- a/.github/workflows/run_test_action.yml
+++ b/.github/workflows/run_test_action.yml
@@ -32,7 +32,7 @@ jobs:
         pipenv run metmuseum/metmuseum_scratcher.py
         pipenv run wikicommons/wikicommons_scratcher.py
         pipenv run wikipedia/wikipedia_scratcher.py
-        pipenv run internetarchive/internetarchive_scratcher.py
+        # pipenv run internetarchive/internetarchive_scratcher.py
 
     - name: Commit changes
       uses: EndBug/add-and-commit@v9 
