--- a/.github/workflows/run_test_action.yml
+++ b/.github/workflows/run_test_action.yml
@@ -13,6 +13,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
       with:
+        fetch-depth: 0
         ref: automate-qtc
     - name: Set up Python 3.10
       uses: actions/setup-python@v2
